@@ -4,7 +4,8 @@
    Modernize configure.ac a bit.
  * configure.ac, m4/geany-revision.m4, m4/geany-binreloc.m4,
    m4/geany-gnu-regex.m4, m4/geany-plugins.m4, m4/geany-i18n.m4,
-   m4/geany-mingw.m4, m4/geany-socket.m4, m4/geany-vte.m4:
+   m4/geany-mingw.m4, m4/geany-socket.m4, m4/geany-vte.m4,
+   m4/geany-utils.m4:
    Extract some configure logic to separate files for better
    readability.
 
